fixing success message position on contact and aligning grid to left on lineup

--- a/wp-content/themes/hopscotch-2017/css/src/components/_grid.scss
+++ b/wp-content/themes/hopscotch-2017/css/src/components/_grid.scss
@@ -4,6 +4,11 @@
   flex-wrap: wrap;
   box-sizing: border-box;
 
+  &--left {
+    justify-content: left;
+    @extend .grid;
+  }
+
   &--simple {
     @extend .grid;
   }
